# langchain-cookbook

./: .gitignore  pyproject.toml  setup.cfg
chains/foundational/: llm_chain.py  sequential_chain.py  simple_sequential_chain.py
model_io/chat_models/: chat_openai.py
output_parsers/: list.py
