[tool.poetry]
name = "langchain-cookbook"
version = "0.1.0"
description = ""
authors = ["なるみ <toucans-cutouts0f@icloud.com>"]
readme = "README.md"
packages = [{include = "langchain_cookbook"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.235"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
